--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -1,14 +1,15 @@
 name: Bump version
 
 on:
-  push:
+  pull_request:
+    types: [closed]
     branches:
       - master
 
 jobs:
   bump-version:
-    if: "!startsWith(github.event.head_commit.message, 'bump:')"
-    runs-on: ubuntu-latest
+    if: "github.event.pull_request.merged == true && !startsWith(github.event.pull_request.title, 'bump:')"
+    runs_on: ubuntu-latest
     name: "Bump version and create changelog with commitizen"
     steps:
       - name: Check out
