feat: added a feature

--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -21,3 +21,11 @@ jobs:
         uses: commitizen-tools/commitizen-action@master
         with:
           github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+      - name: Configure Git
+        run: |
+          git config user.name "Ngezler"
+          git config user.email "xhalanga2@gmail.com"
+      - name: Push changes
+        run: |
+          git push origin master
+          git push --tags
